--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-datocms": "^4.1.3",
     "react-dom": "18.2.0",
+    "sql-highlight": "^4.3.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
