--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
     "datocms-structured-text-to-html-string": "^2.1.11",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "install": "^0.13.0",
     "next": "13.4.7",
+    "npm": "^9.8.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datocms": "^4.1.3",
     "react-dom": "18.2.0",
     "sql-highlight": "^4.3.3",
