--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-hooks-library/core": "^0.5.1",
     "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.3.2",
+    "@types/number-to-words": "^1.2.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
@@ -24,9 +25,11 @@
     "datocms-structured-text-to-html-string": "^2.1.11",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "next": "13.4.7",
     "npm": "^9.8.0",
+    "number-to-words": "^1.2.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
